--- a/style.css
+++ b/style.css
@@ -17,4 +17,15 @@ body{
     height: 400px;
     margin-top: 120px;
 }
+.input{
+    width: 300px;
+    height: 30px;
+    border-radius: 10px;
+    padding: 7px;
+
+}
+.box{
+    margin-top: 40px;
+    margin-bottom: 70px;
+}
 
