--- a/style.css
+++ b/style.css
@@ -28,4 +28,15 @@ body{
     margin-top: 40px;
     margin-bottom: 70px;
 }
+.convert,
+.reset,
+.change{
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    color: aliceblue;
+    background-color: rgb(99, 115, 207);
+    margin-left: 95px;
+}
+
 
