--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     padding: 0;
 }
 body{
-    background: url(./img/fe83ec498e27923618ffec4e17b67458.jpg) no-repeat;
-    background-size:1700px 850px;
+    background: url("https://source.unsplash.com/random/1700x800/?sea");
+
 }
 .title{
     text-align: center;
